--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </div>
           <a href="#" class="change">Change</a>
         </div>
-        <div class="buttons" s>
+        <div class="buttons">
           <a href="#" class="payment">Proceed to Payment</a>
           <a href="#" class="cancel">Cancel Order</a>
         </div>
